added stew 1 info
picture
rating
text

--- a/thestews.html
+++ b/thestews.html
@@ -76,18 +76,20 @@
                             <li>cover stew in medium dusting of flour</li>
                             <li>add salt, pepper, and bay leaves</li>
                             <li>add last beer</li>
-                            <li>cook on medium low heat (4 on my stove) for XXX hours, dredging every hour</li>
+                            <li>cook on medium low heat (4 on my stove) for 7 hours, dredging every hour</li>
                         </ul>
                     </div>
                 </div>
 
                 <div class="text-simple">
                     <h2>Rating and comments</h2>
-                    <h4>Rating: XXX/10</h4>
+                    <h4>Rating: 6/10</h4>
                     <div class="small-space"></div>
                     <h4>Comments:</h4>
-                    <p>text holder</p>
+                    <p>Overall pretty good stew. Didn't have my spices with me so on the bland side. May be too salty due to premade broth. Squash doesn't really add anything to it.</p>
                 </div>
+
+                <img src="imgs/stew1.jpg" alt="stew 1" style="height: 15rem; width: 10rem;">
 
             </div>
 
