--- a/homepage.html
+++ b/homepage.html
@@ -17,12 +17,12 @@
     <body class="hp">
 
         <div class = "contain">
-            <a href="homepage.html" class="big-bttn">S T E W S D A Y</a>
+            <a href="homepage.html" class="big-bttn-home">S T E W S D A Y</a>
 
             <div class = "contain-buttons">
-                <a class="bttn" href="thestews.html">the stews</a>
-                <a class="bttn" href="about.html">about</a>
-                <a class="bttn" href="https://github.com/kiecphrase">more stuff</a>
+                <a class="bttn-home" href="thestews.html">the stews</a>
+                <a class="bttn-home" href="about.html">about</a>
+                <a class="bttn-home" href="https://github.com/kiecphrase">more stuff</a>
             </div>
 
         </div>
