--- a/thestews.html
+++ b/thestews.html
@@ -93,6 +93,76 @@
 
             </div>
 
+            <div class="mid-space"></div>
+
+            <div class="text-deco">
+                <h1>Stew 2</h1>
+                <h4>Breakfast Stew?</h4>
+                <div class="small-space"></div>
+                <div class="flex-general">
+                    <div class="text-simple">
+                        <h3>What's in it</h3>
+                        <ul style="text-align: left;">
+                            <li>1 box of white mushrooms</li>
+                            <li>1 medium summer squash</li>
+                            <li>4 sweet potatoes</li>
+                            <li>1/2 Large leek </li>
+                            <li>3 clove of garlic</li>
+                            <li>1 kielbasa</li>
+                            <li>1 pack of fatty beef, cubed</li>
+                            <li>2 packs of pork loin</li>
+                            <li>2 packs of porkchops</li>
+                            <li>1/2lb white rice</li>
+                            <li>2 bay leaves</li>
+                            <li>thin layer of paprika</li>
+                            <li>dusting of thyme</li>
+                            <li>dusting of rosemary</li>
+                            <li>1/2 pack of Japanese White Curry instant stock</li>
+                            <li>6 twists of salt from a grinder</li>
+                            <li>6 twists of black pepper from a grinder</li>
+                            <li>2 small boxes of turkey stock</li>
+                            <li>1/2 gallon apple cider</li>
+                            <li>3 shots of honey whiskey</li>
+                        </ul>
+                    </div>
+
+                    <div class="line"></div>
+                    
+                    <div class="text-simple">
+                        <h3>Prep / cooking instructions</h3>
+                        <ul style="text-align: left;">
+                            <li>cut up the leek and ass a first layer</li>
+                            <li>slice squash and sweet potatoes, add as second layer</li>
+                            <li>add bay leaves</li>
+                            <li>cut up and add all the meat</li>
+                            <li>completely cover meat with paprika</li>
+                            <li>half the mushrooms, then add them to stew</li>
+                            <li>slice all garlic, add to stew</li>
+                            <li>add rice</li>
+                            <li>add salt, pepper, rosemary, and thyme</li>
+                            <li>add turkey stock</li>
+                            <li>add whiskey</li>
+                            <li>break up curry block into small chunks, then add to stew</li>
+                            <li>add apple cider</li>
+                            <li>cover pot, and cook on medium low (4 on my stove) until simmering</li>
+                            <li>cook on low heat (2 on my stove) for 5 hours, dredging every hour</li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div class="text-simple">
+                    <h2>Rating and comments</h2>
+                    <h4>Rating: 8/10</h4>
+                    <div class="small-space"></div>
+                    <h4>Comments:</h4>
+                    <p>Very applely base, but the flavors of the individual ingredients shine through. Fairly thick consistency overall. Still could use more salt and pepper.</p>
+                </div>
+
+                <img src="imgs/stew2.jpg" alt="stew 1" style="height: 15rem; width: 10rem;">
+
+            </div>
+        </div>
+
         <!-- U T I L I T Y -->
         
         <!-- JQuery -->
