--- a/thestews.html
+++ b/thestews.html
@@ -131,7 +131,7 @@
                     <div class="text-simple">
                         <h3>Prep / cooking instructions</h3>
                         <ul style="text-align: left;">
-                            <li>cut up the leek and ass a first layer</li>
+                            <li>cut up the leek and add as first layer</li>
                             <li>slice squash and sweet potatoes, add as second layer</li>
                             <li>add bay leaves</li>
                             <li>cut up and add all the meat</li>
