--- a/homepage.html
+++ b/homepage.html
@@ -30,7 +30,7 @@
         <div class="homepage-special">
             <h1 class="question">Stew, is there a better way to eat?</h1>
 
-            <h3 class="answer">No.</h3>
+            <h3 class="answer">Stew Season 2022 is about to start!</h3>
         </div>
 
         <!-- U T I L I T Y -->
