--- a/homepage.html
+++ b/homepage.html
@@ -14,7 +14,7 @@
         <link rel="stylesheet" href="steez.css">
 
     </head>
-    <body class="hp">
+    <body>
 
         <div class = "contain">
             <a href="homepage.html" class="big-bttn-home">S T E W S D A Y</a>
