--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
-        <link rel="stylesheet" href="steez.css">
+        <link rel="stylesheet" href="steezy.css">
 
     </head>
     <body>
