--- a/homepage.html
+++ b/homepage.html
@@ -30,7 +30,7 @@
         <div class="homepage-special">
             <h1 class="question">Stew, is there a better way to eat?</h1>
 
-            <h3 class="answer">We'll be back for the 2023 Stewin Season!</h3>
+            <h3 class="answer">STEW STEW STEW STEW</h3>
         </div>
 
         <!-- U T I L I T Y -->
